--- a/gui/atmospheres_settings.html
+++ b/gui/atmospheres_settings.html
@@ -1,48 +1,49 @@
 <div class="row">
-    <div class="col s5">
-        <label>
-            <input class="filled-in simple-value-checkbox" type="checkbox" id="set_enable_atmosphere"
-                   checked/>
+    <div class="col-5">
+        <label class="checklabel">
+            <input type="checkbox" id="set_enable_atmosphere" checked/>
+            <i class="material-icons"></i>
             <span>Enabled</span>
         </label>
     </div>
-    <div class="col s7">
-        <label>
-            <input class="filled-in simple-value-checkbox" type="checkbox" id="set_enable_water"/>
+    <div class="col-7">
+        <label class="checklabel">
+            <input type="checkbox" id="set_enable_water"/>
+            <i class="material-icons"></i>
             <span>Water</span>
         </label>
     </div>
-    <div class="col s7 offset-s5">
-        <label>
-            <input class="filled-in simple-value-checkbox" type="checkbox"
-                   id="set_enable_light_shafts"/>
+    <div class="col-7 offset-5">
+        <label class="checklabel">
+            <input type="checkbox" id="set_enable_light_shafts"/>
+            <i class="material-icons"></i>
             <span>Light Shafts</span>
         </label>
     </div>
-    <div class="col s7 offset-s5">
-        <label>
-            <input class="filled-in simple-value-checkbox" type="checkbox" id="set_enable_clouds"
-                   checked/>
+    <div class="col-7 offset-5">
+        <label class="checklabel">
+            <input type="checkbox" id="set_enable_clouds" checked/>
+            <i class="material-icons"></i>
             <span>Clouds</span>
         </label>
     </div>
 </div>
 
 <div class="row">
-    <div class="col s5">
+    <div class="col-5">
         Water Level
     </div>
-    <div class="col s7">
+    <div class="col-7">
         <div id="set_water_level">
         </div>
     </div>
 </div>
 
 <div class="row">
-    <div class="col s5">
+    <div class="col-5">
         Quality
     </div>
-    <div class="col s7">
+    <div class="col-7">
         <div id="set_atmosphere_quality"></div>
     </div>
 </div>
