:wrench: Transform JS API calls to camelCase

--- a/gui/atmospheres_settings.html
+++ b/gui/atmospheres_settings.html
@@ -1,28 +1,28 @@
 <div class="row">
     <div class="col-5">
         <label class="checklabel">
-            <input type="checkbox" id="set_enable_atmosphere" checked />
+            <input type="checkbox" id="setEnableAtmosphere" checked />
             <i class="material-icons"></i>
             <span>Enabled</span>
         </label>
     </div>
     <div class="col-7">
         <label class="checklabel">
-            <input type="checkbox" id="set_enable_water" />
+            <input type="checkbox" id="setEnableWater" />
             <i class="material-icons"></i>
             <span>Water</span>
         </label>
     </div>
     <div class="col-7 offset-5">
         <label class="checklabel">
-            <input type="checkbox" id="set_enable_light_shafts" />
+            <input type="checkbox" id="setEnableLightShafts" />
             <i class="material-icons"></i>
             <span>Light Shafts</span>
         </label>
     </div>
     <div class="col-7 offset-5">
         <label class="checklabel">
-            <input type="checkbox" id="set_enable_clouds" checked />
+            <input type="checkbox" id="setEnableClouds" checked />
             <i class="material-icons"></i>
             <span>Clouds</span>
         </label>
@@ -34,7 +34,7 @@
         Water Level
     </div>
     <div class="col-7">
-        <div id="set_water_level">
+        <div id="setWaterLevel">
         </div>
     </div>
 </div>
@@ -44,6 +44,6 @@
         Quality
     </div>
     <div class="col-7">
-        <div id="set_atmosphere_quality"></div>
+        <div id="setAtmosphereQuality"></div>
     </div>
 </div>
