--- a/gui/atmospheres_settings.html
+++ b/gui/atmospheres_settings.html
@@ -1,28 +1,28 @@
 <div class="row">
     <div class="col-5">
         <label class="checklabel">
-            <input type="checkbox" id="setEnableAtmosphere" checked />
+            <input type="checkbox" data-callback="atmosphere.setEnable" checked />
             <i class="material-icons"></i>
             <span>Enabled</span>
         </label>
     </div>
     <div class="col-7">
         <label class="checklabel">
-            <input type="checkbox" id="setEnableWater" />
+            <input type="checkbox" data-callback="atmosphere.setEnableWater" />
             <i class="material-icons"></i>
             <span>Water</span>
         </label>
     </div>
     <div class="col-7 offset-5">
         <label class="checklabel">
-            <input type="checkbox" id="setEnableLightShafts" />
+            <input type="checkbox" data-callback="atmosphere.setEnableLightShafts" />
             <i class="material-icons"></i>
             <span>Light Shafts</span>
         </label>
     </div>
     <div class="col-7 offset-5">
         <label class="checklabel">
-            <input type="checkbox" id="setEnableClouds" checked />
+            <input type="checkbox" data-callback="atmosphere.setEnableClouds" checked />
             <i class="material-icons"></i>
             <span>Clouds</span>
         </label>
@@ -34,7 +34,7 @@
         Water Level
     </div>
     <div class="col-7">
-        <div id="setWaterLevel">
+        <div data-callback="atmosphere.setWaterLevel">
         </div>
     </div>
 </div>
@@ -44,6 +44,6 @@
         Quality
     </div>
     <div class="col-7">
-        <div id="setAtmosphereQuality"></div>
+        <div data-callback="atmosphere.setQuality"></div>
     </div>
 </div>
